# graceful-shutdown

./: README.md  setup.cfg
src/graceful_shutdown/: __init__.py  manager.py
