[metadata]
name = graceful-shutdown
version = 0.1.0
author = Erin Turnbull
author_email = erin.a.turnbull@gmail.com
description = Graceful shutdown solution for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbullerin/graceful-shutdown
project_urls =
    Bug Tracker = https://github.com/turnbullerin/graceful-shutdown/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    autoinject>=0.2.2
    "pywin32 : os_name == 'nt'"

[options.packages.find]
where = src